<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/selector_lvitem_border_style"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- 工单编号 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_dis_wonum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginRight="35dp"
                android:layout_centerVertical="true"
                android:textColor="@color/wolist_btntext_color"
                android:textSize="@dimen/baseitem_text_tips_size" />

            <TextView
                android:id="@+id/tv_desceibute"
                style="@style/base_text_button"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/iv_itemdel"
               android:layout_centerVertical="true"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/horizonline_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- 计划日期 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_dis_plandate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wolist_itemplandate"
                    android:textColor="@color/list_itemtext_tipscolor"
                    android:textSize="@dimen/baseitem_text_tips_size" />

                <ImageView
                    android:id="@+id/gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_gpsbg_focus"
                    android:visibility="invisible" />
            </LinearLayout>
            <!-- 作业项目 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_dis_planpro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wolist_itempro"
                    android:textColor="@color/list_itemtext_tipscolor"
                    android:textSize="@dimen/baseitem_text_tips_size" />
            </LinearLayout>

            <!-- 作业位置 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_dis_lead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wolist_itempeople"
                    android:textColor="@color/list_itemtext_tipscolor"
                    android:textSize="@dimen/baseitem_text_tips_size" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@drawable/icon_vertical_line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:orientation="vertical"
            android:gravity="center" >

            <TextView
                android:id="@+id/iv_itemnext"
                style="@style/base_text_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/selector_arrow_lvitem_next_style"
                android:gravity="center"
                android:text="@string/dis_tv_particular" />
            
            <TextView
                android:id="@+id/iv_wonum_other"
                style="@style/base_text_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:drawableRight="@drawable/selector_arrow_lvitem_next_style"
                android:gravity="center"
                android:text="@string/dis_tv_recorder_line" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>